--- a/templates/core/partials/_footer.html
+++ b/templates/core/partials/_footer.html
@@ -5,7 +5,7 @@
         <div class="row col-12">
             <div class="col-12 col-md-6 col-lg-4 pb-3 pb-md-3 pb-lg-0">
                 Copyright &copy;
-		<span class="year"></span> <a href="https://github.com/nimadorostkar"> Nima Dorostkar </a>
+		<span class="year"></span> <a href="https://github.com/Majestylink"> Trust Real Estate </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 pb-3 pb-md-3 pb-lg-0">
                 <a href="{% url 'impressum' %}" class="text-white"><span>{{ _("Impressum") }}</span></a>
