--- a/templates/core/partials/_topbar.html
+++ b/templates/core/partials/_topbar.html
@@ -12,10 +12,10 @@
 
 
       <div class="col-md-3">
-        <i class="fas fa-phone"></i> +98(9369295073)
+        <i class="fas fa-phone"></i> +974(33836624)
       </div>
       <div class="col-md-3">
-        <i class="fas fa-envelope-open"></i> nimadorostkar97@gmail.com
+        <i class="fas fa-envelope-open"></i> khaoula.ben@ykmedia.qa
       </div>
 
       <div class="col-md-3">
