--- a/templates/core/partials/_navbar.html
+++ b/templates/core/partials/_navbar.html
@@ -18,7 +18,7 @@
             {% endif %}
           >
             <a class="nav-link" href="{% url 'index' %}">
-            {{ _("Real-estate") }}
+            {{ _("Trust-Real-estate") }}
           </a>
           </li>
           <li
